# AECS-scheduler

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
aecs/: __init__.py  callback.py  scheduler.py
tests/: __init__.py  test_scheduler.py
