[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aecs-scheduler"
version = "0.1.0"
description = "Adaptive Event-Control Scheduler — state-aware, event-driven LR scheduling for PyTorch"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "JuiceB0xC0de" }]
requires-python = ">=3.9"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
hf = ["transformers>=4.30"]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/JuiceB0xC0de/aecs-scheduler"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
target-version = ["py39"]
